feat:add some blog & add hover button backto

--- a/src/views/blog/think/think-2023-10-19-01.md
+++ b/src/views/blog/think/think-2023-10-19-01.md
@@ -12,6 +12,8 @@ type: think
 
 5W2H是一种用于收集信息和提出问题的方法，以便了解情况或问题。它代表以下内容：
 
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20231128162940.png)
+
 下面使用造一艘船为思路分析的例子
 
 ### 1）Who 谁？
@@ -63,15 +65,35 @@ e.g.
 e.g.
 最大可使用成本。以及需要花费的时间成本？钱成本？人力成本？物力成本？
 
-### 总结
+### 8）总结
 
 5W2H分析法只是分析法中比较简单的一种，但对于行业的分析或复杂商业问题的分析不太适用。
 
 比如公司的订单销售量下降了，首先要找到下降的原因，此场景下漏斗分析则比较适用。
 
+e.g.
+
+下面是一个使用5W2H分析法的例子：
+
+What（什么）：公司的销售额下降了。
+
+Why（为什么）：由于市场竞争激烈，公司的产品已经过时，无法满足客户需求。
+
+Where（在哪里）：公司的销售额下降主要发生在国内市场。
+
+When（何时）：公司的销售额下降始于去年第四季度。
+
+Who（谁）：公司的销售团队负责人应该对销售额下降负责。
+
+How（如何）：公司可以通过研发新产品、改进现有产品、提高客户服务质量等方式来提高销售额。
+
+How much（多少）：公司需要制定一个详细的计划，包括预算、时间表和目标，以确保销售额的增长。
+
 ## 二、漏斗分析
 
 漏斗分析是一种用于分析和优化转化率的方法。它主要用于衡量和优化用户在一个过程中的转化率，例如从用户访问网站到最终购买产品的转化率。
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20231128162804.png)
 
 ### 1）定义目标
 
@@ -107,13 +129,24 @@ e.g.
 
 持续跟踪转化率，并根据数据和用户反馈进行调整和优化。
 
-### 总结
+### 8）总结
 
 通过漏斗分析，可以帮助企业识别和解决转化率低的问题，提高用户转化率，从而增加业务的成功和效益。
+
+e.g. 
+
+漏斗分析模型已经广泛应用于网站和APP用户行为分析的流量监控、电商行业、零售的购买转化率、产品营销和销售等日常数据运营与数据分析的工作中。
+
+例如：漏斗模型在电商网站中的应用，用户从首页进入最终完成支付的行为，大多需要经过几个环节，从商品/浏览分类——查看商品详情——加入购物车——生成订单——开始支付——完成支付——回购商品
+
 
 ## 三、SWOT
 
 SWOT分析是一种常用的战略管理工具，用于评估**一个组织或项目**的优势（Strengths）、劣势（Weaknesses）、机会（Opportunities）和威胁（Threats）。它可以帮助组织或个人了解自身的内部优势和劣势，以及外部的机会和威胁，从而制定相应的战略和行动计划。
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20231128154911.png)
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20231128162645.png)
 
 ### 1）优势
 
@@ -143,13 +176,29 @@ e.g.
 e.g.
 竞争加剧、法规变化、经济不稳定
 
-### 总结
+### 5）总结
 
 通过SWOT分析，可以帮助组织或个人全面了解自身的优势和劣势，以及外部的机会和威胁，从而制定战略和行动计划。例如，利用优势来抓住机会，改善劣势以应对威胁。SWOT分析还可以用于评估新项目的可行性，帮助做出是否继续推进的决策。
+
+e.g.
+
+以下是一个使用SWOT分析的例子：
+
+假设你是一家新开的小型咖啡店的老板，你想了解自己所处的市场环境和竞争对手。你可以使用SWOT分析来分析你所处的行业。下面是一个简单的例子：
+
+优势（strength）：你的咖啡店位于一个繁华的商业区，拥有良好的客户口碑和高质量的咖啡豆。
+
+劣势（weakness）：你的咖啡店是一家小型店铺，采购量可能不足以让供应商降低价格。
+
+机会（opportunity）：你的咖啡店可以通过提供优质的服务和产品来吸引更多的顾客。
+
+威胁（threat）：其他咖啡店或便利店可能会成为你的竞争对手。
 
 ## 四、波特五力
 
 波特五力分析是由迈克尔·波特（Michael Porter）提出的一种竞争战略分析工具，用于评估一个行业的竞争力和吸引力。它分析了五个关键要素，以帮助企业了解行业竞争环境，并制定相应的竞争策略。
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20231128162334.png)
 
 ### 1）行业内竞争力（Industry Rivalry）
 
@@ -171,9 +220,118 @@ e.g.
 
 评估替代品对行业的威胁程度。这包括替代品的可用性、替代品的价格竞争力、替代品的性能等
 
-### 总结
+### 6）总结
 
 通过波特五力分析，企业可以了解行业的竞争力和吸引力，从而制定相应的竞争策略。例如，如果行业内竞争激烈，企业可以通过差异化产品或服务来脱颖而出；如果供应商谈判能力强，企业可以寻找多个供应商以降低供应风险；如果顾客谈判能力强，企业可以提供更好的客户服务和价值等
 
+e.g.
+
+以下是一个使用波特五力模型的例子：
+
+假设你是一家新开的小型咖啡店的老板，你想了解自己所处的市场环境和竞争对手。你可以使用波特五力模型来分析你所处的行业。下面是一个简单的例子：
+
+供应商的议价能力：你的咖啡店需要从供应商那里购买咖啡豆、牛奶、糖等原材料。如果供应商数量有限，你的供应商就有更大的议价能力。如果你的咖啡店是一家小型店铺，你的采购量可能不足以让供应商降低价格。
+
+购买者的议价能力：你的顾客可以选择去其他咖啡店或者自己在家泡咖啡。如果你的咖啡店价格过高，顾客可能会选择其他选项。
+
+潜在竞争者的威胁：如果你的咖啡店在一个繁华的商业区，其他人可能会想要开一家咖啡店来与你竞争。
+
+替代品的威胁：如果你的咖啡店在一个商业区，顾客可能会选择去其他咖啡店或者便利店购买咖啡。
+
+现有竞争者的竞争能力：如果你的咖啡店在一个商业区，你的竞争对手可能是其他咖啡店或者连锁咖啡店。
+
 ## 五、STAR法则
 
+STAR法则是指Situation-Task-Action-Result的缩写，即情境-任务-行动-结果。这是一种讲述自己故事的方式，或者说，是一个清晰、条理的作文模板。在面试中，STAR法则可以帮助你更好地描述自己的经历，让面试官更好地了解你的能力和经验。
+
+### 1）Situation（情境）
+
+描述事情发生的背景和环境，让面试官了解你所处的情况。
+
+### 2）Task（任务）
+
+明确你的任务和目标，让面试官知道你需要完成什么。
+
+### 3）Action（行动）
+
+描述你采取的行动和方法，让面试官了解你的思考过程和解决问题的能力。
+
+### 4）Result（结果）
+
+总结你的行动和方法所带来的结果，让面试官了解你的成就和贡献。
+
+### 5）总结
+
+使用STAR法则时，你需要注意以下几点：
+
+- 每个部分都要简洁明了，不要过于冗长。
+- 重点突出你的行动和结果，让面试官更好地了解你的能力和经验。
+- 用具体的数据和事实来支持你的故事，让面试官更有信心。
+- 在描述行动时，要突出你的思考过程和解决问题的能力。
+- 在总结结果时，要突出你的成就和贡献。
+
+e.g.
+
+当你在面试中被问到一个问题时，使用STAR法则可以帮助你更好地描述自己的经历。下面是一个使用STAR法则的例子：
+
+1. Situation（情境）：我曾经在一家公司担任销售经理，负责推广公司的产品。
+
+2. Task（任务）：公司的销售业绩一直不太理想，我的任务是提高销售额并扩大市场份额。
+
+3. Action（行动）：我采取了以下措施：
+
+- 与客户建立良好的关系，了解他们的需求和反馈。
+- 与团队成员合作，制定了一份详细的销售计划，并确保每个人都清楚自己的任务和目标。
+- 通过电话、邮件和面对面会议等多种方式与客户沟通，解决他们的问题并提供帮助。
+- 及时跟进客户的反馈和投诉，并采取措施解决问题。
+- 定期与团队成员开会，分享销售数据和经验，并提出改进意见。
+
+4. Result（结果）：我的行动带来了显著的成果。公司的销售额增长了30%，市场份额也扩大了10%。我的团队成员也更加团结和协作，工作效率和质量都有所提高。
+
+## 六、SMART原则
+
+![](https://cdn.jsdelivr.net/gh/senong2000/image/20231128160557.png)
+
+SMART原则是一种目标管理的方法，由管理学大师彼得·杜拉克于1945年提出。它是指五个英文单词的首字母缩写，分别是：
+
+### 1）Specific（具体的）
+
+目标必须是具体的，不能过于笼统或模糊。
+
+### 2）Measurable（可衡量的）
+
+目标必须是可衡量的，需要有明确的标准和度量方式。
+
+### 3）Achievable（可实现的）
+
+目标必须是可实现的，不能过于理想化或不切实际。
+
+### 4）Relevant（相关的）
+
+目标必须与你的职业发展或公司的战略目标相关联。
+
+### 5）Time-bound（有时限的）
+
+目标必须有明确的截止日期或时间范围。
+
+### 6）总结
+
+- 每个部分都要简洁明了，不要过于冗长。
+- 重点突出你的行动和结果，让面试官更好地了解你的能力和经验。
+- 用具体的数据和事实来支持你的故事，让面试官更有信心。
+- 在描述行动时，要突出你的思考过程和解决问题的能力。
+- 在总结结果时，要突出你的成就和贡献。
+
+e.g.
+
+当你在制定目标时，使用SMART原则可以帮助你设定明确、可行、有效的目标。下面是一个使用SMART原则的例子：
+
+1. Specific（具体的）：我想在2024年参加一场马拉松比赛。
+
+2. Measurable（可衡量的）：我想在比赛中跑完全程，用时不超过4小时。
+
+3. Achievable（可实现的）：我已经开始训练，并且已经完成了一些5K和10K的比赛。
+
+4. Relevant（相关的）：我想通过参加马拉松比赛来挑战自己，提高自己的身体素质。
+
+5. Time-bound（有时限的）：我想在2024年底之前完成这个目标。
